FIX: Realign Help text with the new label size on edit page[t30951]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@19221 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -2272,7 +2272,7 @@ a.BrowseRefresh{
 /* Fixes for form checkboxes and date range fields */
 .BasicsBoxEdit .Question label:not(.customFieldLabel) {width: 250px;}
 .BasicsBoxEdit .Question label.InnerLabel {width: 200px;}
-.BasicsBoxEdit .FormHelp {margin: 0 0 10px 210px;}
+.BasicsBoxEdit .FormHelp {margin: 0 0 10px 260px;}
 
 .nodes_input_checkbox {float:left; margin-top: 5px}
 
